modified:   "\352\270\260\354\264\210\354\241\260\354\202\254 \352\270\260\353\241\235 \353\275\221\352\270\260.ipynb" 	modified:   "\352\270\260\354\264\210\354\241\260\354\202\254 \354\206\215\354\204\261\355\205\214\354\235\264\353\270\224_\353\263\221\355\225\251.ipynb" 	modified:   "\352\270\260\354\264\210\354\241\260\354\202\254 \354\241\260\354\235\270(2019\353\205\204).ipynb" 	new file:   "\352\270\260\354\264\210\354\241\260\354\202\254_\355\225\204\354\232\224\355\225\234 \355\214\214\354\235\274 \355\225\204\355\204\260\353\247\201.ipynb" 	deleted:    "\354\206\215\354\204\261 \355\205\214\354\235\264\353\270\224 \354\236\220\353\243\214 \354\275\224\353\223\234.xlsx"

--- a/기초조사 기록 뽑기.ipynb
+++ b/기초조사 기록 뽑기.ipynb
@@ -12,8 +12,7 @@
     "\n",
     "dir = 'F:/지하수 기초조사 성과'\n",
     "# 파일 안의 엑셀 목록화\n",
-    "file_list = os.listdir(dir) \n",
-    "\n"
+    "file_list = os.listdir(dir) "
    ]
   },
   {
